--- a/test.ipynb
+++ b/test.ipynb
@@ -33,22 +33,22 @@
       "\t\t\t 24000 - 0 / 960000.0 = 0.025 * 24000.0 ?? 6074.120714033227\n",
       "\t\tFactor: 0.025 = (24000.0 - 0.0)/960000.0\n",
       "\t\tEff: 40.0\n",
-      "\tConsidering: MESProject[12, 0.02564102564102564]\n",
+      "\tConsidering: MESProject[2, 0.02564102564102564]\n",
       "\t\t Skipped as affordability is too high: 0.02564102564102564 > 0.025\n",
       "[MESProject[13, 0.025]]\n",
       "Price is 600.0\n",
       "========================\n",
-      "\tConsidering: MESProject[12, 0.02564102564102564]\n",
-      "\t\t\t 50000 - 0 / 1950000.0 = 0.02564102564102564 * 50000.0 ?? 5474.120714033227\n",
-      "\t\tFactor: 0.02564102564102564 = (50000.0 - 0.0)/1950000.0\n",
-      "\t\tEff: 39.0\n",
       "\tConsidering: MESProject[2, 0.02564102564102564]\n",
       "\t\t\t 13000 - 0 / 507000.0 = 0.02564102564102564 * 13000.0 ?? 5474.120714033227\n",
       "\t\tFactor: 0.02564102564102564 = (13000.0 - 0.0)/507000.0\n",
       "\t\tEff: 39.0\n",
+      "\tConsidering: MESProject[12, 0.02564102564102564]\n",
+      "\t\t\t 50000 - 0 / 1950000.0 = 0.02564102564102564 * 50000.0 ?? 5474.120714033227\n",
+      "\t\tFactor: 0.02564102564102564 = (50000.0 - 0.0)/1950000.0\n",
+      "\t\tEff: 39.0\n",
       "\tConsidering: MESProject[31, 0.02631578947368421]\n",
       "\t\t Skipped as affordability is too high: 0.02631578947368421 > 0.02564102564102564\n",
-      "[MESProject[12, 0.02564102564102564], MESProject[2, 0.02564102564102564]]\n",
+      "[MESProject[2, 0.02564102564102564], MESProject[12, 0.02564102564102564]]\n",
       "Price is 1282.051282051282\n",
       "========================\n",
       "\tConsidering: MESProject[2, 0.02564102564102564]\n",
@@ -177,16 +177,16 @@
       "\t\t Removed for lack of budget: 38718.82070885604 < 150000.0\n",
       "\tConsidering: MESProject[47, 0.09090909090909091]\n",
       "\t\t Removed for lack of budget: 49176.96365259199 < 200000.0\n",
-      "\tConsidering: MESProject[36, 0.1111111111111111]\n",
-      "\t\t Removed for lack of budget: 23260.353376430714 < 61000.0\n",
       "\tConsidering: MESProject[22, 0.1111111111111111]\n",
       "\t\t Removed for lack of budget: 40958.54025546148 < 320000.0\n",
+      "\tConsidering: MESProject[36, 0.1111111111111111]\n",
+      "\t\t Removed for lack of budget: 23260.353376430714 < 61000.0\n",
       "\tConsidering: MESProject[5, 0.1111111111111111]\n",
       "\t\t Removed for lack of budget: 34415.188044329065 < 75000.0\n",
-      "\tConsidering: MESProject[8, 0.3333333333333333]\n",
-      "\t\t Removed for lack of budget: 12923.989439182078 < 250000.0\n",
       "\tConsidering: MESProject[37, 0.3333333333333333]\n",
       "\t\t Removed for lack of budget: 11486.952989035875 < 305000.0\n",
+      "\tConsidering: MESProject[8, 0.3333333333333333]\n",
+      "\t\t Removed for lack of budget: 12923.989439182078 < 250000.0\n",
       "[MESProject[15, 0.06738241025166355]]\n",
       "Price is 1347.648205033271\n",
       "========================\n",
@@ -194,18 +194,30 @@
       "\t\t Removed for lack of budget: 57822.467278854005 < 65000.0\n",
       "[]\n"
      ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'BudgetAllocation' object has no attribute 'explained_detials'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m instance, profile \u001b[38;5;241m=\u001b[39m election\u001b[38;5;241m.\u001b[39mparse_pabulib(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./e4.pb\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m outcome \u001b[38;5;241m=\u001b[39m method_of_equal_shares(instance, profile, sat_class\u001b[38;5;241m=\u001b[39mCost_Sat, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, log_details\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m----> 8\u001b[0m vis \u001b[38;5;241m=\u001b[39m MESVisualiser(profile, instance, \u001b[43moutcome\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexplained_detials\u001b[49m)\n\u001b[0;32m     10\u001b[0m vis\u001b[38;5;241m.\u001b[39mrender(outcome, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./output.html\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'BudgetAllocation' object has no attribute 'explained_detials'"
+     ]
     }
    ],
    "source": [
     "from pabutools.election import Cost_Sat\n",
     "from pabutools import election\n",
-    "from pabutools.visualisation.mes_data_store import MESDataStore\n",
+    "from pabutools.visualisation.visualisation import MESVisualiser\n",
     "from pabutools.rules.mes import method_of_equal_shares\n",
     "\n",
     "instance, profile = election.parse_pabulib(\"./e4.pb\")\n",
-    "dataStore = MESDataStore(profile, instance)\n",
-    "outcome = method_of_equal_shares(instance, profile, sat_class=Cost_Sat, verbose=True, mes_data_store=dataStore)\n",
-    "dataStore.render(outcome, \"./output.html\")"
+    "outcome = method_of_equal_shares(instance, profile, sat_class=Cost_Sat, verbose=True, log_details=True)\n",
+    "vis = MESVisualiser(profile, instance, outcome.explanation_data)\n",
+    "\n",
+    "vis.render(outcome, \"./output.html\")"
    ]
   }
  ],
